hello-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-openshift
  name: hello-openshift
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-openshift
    weight: 100
